--- a/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
+++ b/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
@@ -11,7 +11,6 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/0b916fe36e001d2a2d737d522c9944d2.png)
 2. 填写域名后，单击**提交**即可。
 ![](https://qcloudimg.tencent-cloud.cn/raw/66360726a9b51e701c70758fc64fd8e3.png)
-
 <dx-alert infotype="explain" title="">
 - sampledomain.com 为示例，此处应替换为您的发信地址。
 - 如果您填入的域名是 sampledomain.com 形式，这属于主域名；如果您填入的域名是 abc.sampledomail.com 形式，这属于非主域名，是否使用主域名发信，在下面的配置中有存在差异，详见对应的说明。
@@ -44,7 +43,6 @@
 <dx-alert infotype="explain" title="">
 - 如果发信域名非主域名，例如：abc.sampledomain.com，主机记录中填入：abc
 - 如果您同时使用多个邮件推送服务商，记录值中需要保留多个服务商的域名，例如： include:qcloudmail.com include:domain1.com，其中 domain1.com 是其他邮件推送服务商的域名。
-
 </dx-alert>
   - DKIM 验证，填入2条记录：
   主机记录填入：`mail._domainkey`
@@ -54,7 +52,7 @@
 <dx-alert infotype="explain" title="">
 如果发信域名非主域名，例如：abc.sampledomain.com，主机记录中填入：mail._domainkey.abc。
 </dx-alert>
-  - 主机记录填入：`qcloud._domainkey`
+  主机记录填入：`qcloud._domainkey`
   记录类型选择：TXT
   记录值中填入您的“记录值”。
 ![](https://qcloudimg.tencent-cloud.cn/raw/3571c6795ad5a5ffff44659f1cf2fca8.png)
@@ -64,12 +62,11 @@
   - DMARC 验证：
   主机记录中填入：`_dmarc`
   记录类型选择：TXT
-  记录值中填入：`v=DMARC1; p=none; rua=mailto:mail@sampledomain.com; ruf=mailto:mail@sampledomain.com; adkim=r; aspf=r`
+  记录值中填入：`v=DMARC1; p=none; rua=mailto:dmarc_report@xxx.com; ruf=mailto:dmarc_report@xxx.com; adkim=r; aspf=r`
 ![](https://qcloudimg.tencent-cloud.cn/raw/7c6adcfbdf981dd748fe87313cfaea2b.png)
 <dx-alert infotype="explain" title="">
-- 记录值中的mail@sampledomain.com为示例，应替换为您的发信地址。
-- 如果发信域名非主域名，例如：abc.sampledomain.com，主机记录中填入：_dmarc.abc，示例发信地址为：mail@abc.sampledomain.com
-
+- 如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：_dmarc.abc
+- 记录值中的 dmarc_report@xxx.com 为示例，应替换为任意您可用于接收伪造报告的邮件地址。
 </dx-alert>
 
 7. 再次回到 [发信域名](https://console.cloud.tencent.com/ses/domain) 配置详情页，单击**验证**进行验证。“当前值”显示的是您在上述配置域名验证信息中配置的内容，当“记录值”与“当前值”完全一致，验证状态为“已验证”，配置完成。
