--- a/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
+++ b/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
@@ -19,7 +19,7 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/55afb951be6f94d7573a7f128811a5bd.png)
 4. 记录弹出界面中“记录值”的内容。[](id:step4)
 >?下图为示例，请以您界面中看到的内容为准。
-
+>
 ![](https://qcloudimg.tencent-cloud.cn/raw/a6d2143e067f2ce51e9897eb8382214c.png)
 5. 如果您的域名托管在腾讯云，请进入  [DNS 解析 DNSPod 控制台](https://console.cloud.tencent.com/cns) 配置验证信息，单击对应的发信域名地址，可进入配置详情页。
 ![](https://qcloudimg.tencent-cloud.cn/raw/6f0f1b7d192a39d549081ebd6d1f3c6e.png)
@@ -45,14 +45,14 @@
 - 如果您同时使用多个邮件推送服务商，记录值中需要保留多个服务商的域名，例如： include:qcloudmail.com include:domain1.com，其中 domain1.com 是其他邮件推送服务商的域名。
 </dx-alert>
   - DKIM 验证，填入2条记录：
-  主机记录填入：`mail._domainkey`
+    - 主机记录填入：`mail._domainkey`
   记录类型选择：TXT
   记录值中填入您的“记录值”。
 ![](https://qcloudimg.tencent-cloud.cn/raw/62d7c629ad48caef5716da173a6842a8.png)
 <dx-alert infotype="explain" title="">
 如果发信域名非主域名，例如：abc.sampledomain.com，主机记录中填入：mail._domainkey.abc。
 </dx-alert>
-  主机记录填入：`qcloud._domainkey`
+    - 主机记录填入：`qcloud._domainkey`
   记录类型选择：TXT
   记录值中填入您的“记录值”。
 ![](https://qcloudimg.tencent-cloud.cn/raw/3571c6795ad5a5ffff44659f1cf2fca8.png)
@@ -65,7 +65,7 @@
   记录值中填入：`v=DMARC1; p=none; rua=mailto:dmarc_report@xxx.com; ruf=mailto:dmarc_report@xxx.com; adkim=r; aspf=r`
 ![](https://qcloudimg.tencent-cloud.cn/raw/7c6adcfbdf981dd748fe87313cfaea2b.png)
 <dx-alert infotype="explain" title="">
-- 如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：_dmarc.abc
+- 如果发信域名非主域名，例如：abc.sampledomain.com，主机记录中填入：_dmarc.abc
 - 记录值中的 dmarc_report@xxx.com 为示例，应替换为任意您可用于接收伪造报告的邮件地址。
 </dx-alert>
 
