--- a/product/数据库/云存储Redis/操作指南/诊断优化/异常诊断.md
+++ b/product/数据库/云存储Redis/操作指南/诊断优化/异常诊断.md
@@ -12,8 +12,8 @@
 
 在**概览**区域，默认展示 Redis 数据库实例近一小时健康得分的变化趋势图，以及数据库健康巡检诊断的风险等级。单击右上角的**历史**，可选择时间区间查看历史时间段的健康得分与巡检诊断结果。
 ![](https://qcloudimg.tencent-cloud.cn/raw/8ba7cb7d49c574a17ab937fe7c15082f.png)
-在**概览**区域下方，展示数据库当前时间的健康得分以及系统架构图。
-- 一方面展示数据库实例当前时间的健康得分，以及当前资源监控指标的统计数据，包括 CPU 使用率、内存使用率、连接使用率、出入流量使用率以及读请求命中率，帮您快速掌握数据库资源的使用情况。单击健康得分下面的**详情**，跳转至健康报告页签，可 [查看健康得分](https://cloud.tencent.com/document/product/1130/39058) 的详细信息。
+在**概览**区域下方，展示数据库当前时间的健康得分以及实例各个节点的告警和异常。
+- 一方面展示数据库实例当前时间的健康得分，以及当前资源监控指标的统计数据，包括 CPU 使用率、内存使用率、连接使用率、出入流量使用率以及读请求命中率，帮您快速掌握数据库资源的使用情况。单击健康得分下面的**详情**，跳转至**健康报告**页签，可 [查看健康得分](https://cloud.tencent.com/document/product/1130/39058) 的详细信息。
 - 另一方面，展示数据库的系统分布架构图，您可以直观地看到数据库架构的 Proxy 节点、主节点、副本节点，并能直接查看到各个节点的告警以及异常事件的数量统计。并且，将鼠标放在架构图的节点上方，可查看该节点的关键指标的监控数据。监控指标，请参见 [性能趋势](https://cloud.tencent.com/document/product/239/73517)。
 ![](https://qcloudimg.tencent-cloud.cn/raw/d31b04a5ebd1efed1ea4cfe83341bebd.png)
 
@@ -49,6 +49,6 @@
 <td>取消忽略</td>
 <td>在<strong>诊断详情</strong>区域右上角，单击<strong>显示已忽略的诊断项</strong>，在诊断详情列表中，找到之前已忽略的诊断项，鼠标放在该诊断项，单击<strong>取消忽略</strong>，取消之前忽略的诊断项。由相同根因产生的异常告警也将被取消忽略。</td></tr>
 </tbody></table>
+<img src="https://qcloudimg.tencent-cloud.cn/raw/ba5a992deb7a469f52c3efcc41838260.png"  style="zoom:80%;">
 
-![](https://qcloudimg.tencent-cloud.cn/raw/ba5a992deb7a469f52c3efcc41838260.png)
 
