--- a/product/移动与通信/云开发低代码平台/模板/模板中心/面试管理/面试管理模板搭建.md
+++ b/product/移动与通信/云开发低代码平台/模板/模板中心/面试管理/面试管理模板搭建.md
@@ -2,193 +2,233 @@
 
 ## 业务场景
 
-简历来源多，简历多，无法对简历进行分类，导致面试记录混乱，面试过多经常记错面试时间，错过面试。本应用模板旨在为中小型企业，没有专门的HR系统的企业提供轻量级面试管理应用，为面试官提供简历管理、分类、面试到期提醒等功能，提高面试效率。
+简历来源多，简历多，无法对简历进行分类，导致面试记录混乱，面试过多经常记错面试时间，错过面试。本应用模板旨在为中小型企业，没有专门的 HR 系统的企业提供轻量级面试管理应用，为面试官提供简历管理、分类、面试到期提醒等功能，提高面试效率。
 
 ## 业务流程
 
-小程序：候选人在小程序端查看招聘岗位，并提交简历申请
-
-模型应用：HR 发布招聘 JD-->通过简历库对简历进行筛选-->推送给面试官-->面试官收到简历对简历进行操作（拒绝/预约面试）-->推送面试通知给候选人-->面试官面试并在系统添加面试记录。
-
-## 面试管理 B 端搭建
-
-## **按照业务场景拆解需要在微搭平台搭建的资源**
-
-
-
-| **资源**                 | **说明**                                                     |
-| ------------------------ | ------------------------------------------------------------ |
-| 应用                     | 招聘小程序面试管理（模型应用）                               |
-| 数据模型                 | 公司介绍：增/删/改/查招聘职位：增/删/改/查简历:增/删//查/推给负责人/约面试/拒绝/发offer面试记录（和简历为主子关系）：增/删/改/查 |
-| 模型页面（面试管理）     | 首页 ：统计相关招聘职位：增删改查页面简历： 增删改查页面面试记录：增删改查页面 |
-| 自定义页面（招聘小程序） | JD详情提交简历                                               |
-| 流程                     | 面试流程                                                     |
-| 用户角色                 | 外部用户：候选人角色：hr、业务负责人                         |
-
-
-
-## **在微搭平台按照步骤逐步配置以下资源**
-
-**创建数据模型**
-
-在微搭控制台创建【公司介绍】数据模型，并创建公司介绍所需的相关字段；按照相同步骤分别创建【招聘职位】【简历】【面试记录】
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/d70e4aa45e1734a02e230f756340a34b.png)        
-
-需要特别关注的是：【简历】数据表和【招聘职位】数据表是关联关系，需要在【简历】中创建关联关系字段“关联职位”，并关联至【招聘职位】表；【面试记录】数据表和【简历】数据表是关联关系，需要在【面试记录】中创建关联关系字段“关联用户”，并关联至【简历】表；
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/84ebb616a073d9411ab3e660fa7d44dd.png)        
-
-**创建流程**
-
-创建简历筛选流程，选择数据触发流，将简历状态更新“2”作为条件。
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/16ce4e0130d23379764ac9ae56dec936.png)        
-
-工作流审批节点为角色审批，审批通过时修改简历状态为“3”；驳回时修改简历状态为“6”
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/5f027e29f5f4505a615766bc92857b5d.png)        
-
-**创建页面**
-
-通过数据模型生成对应的增、删、改、查页面。
-
-在简历列表页面增加【推送】、【拒绝】按钮。拒绝按钮增加自定义方法修改简历状态为“6”，推送按钮增加自定义方法修改简历状态为“2”。
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/8f7c4fc702afcede5746bc76e0d0e444.png)        
-
-创建自定义页面作为首页，用于统计数据的展示。
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/a750cbf443794577b626486b70c22e71.png)        
-
-
-
-# **面试模板C端搭建**
-
-## **设定相关的变量字段**
-
-变量设置入口                 ![img](https://qcloudimg.tencent-cloud.cn/raw/bebeba2ab608b6060bdead14fa1a1506.png)        
-
-
-
-| 字段名称         | 字段标识                          | 变量类型 | 定义操作图                                                   |
-| ---------------- | --------------------------------- | -------- | ------------------------------------------------------------ |
-| 当前选中职位ID   | $app.dataset.state.jobId          | string   | ![img](https://qcloudimg.tencent-cloud.cn/raw/2aa6744cfd134c96dba65c5fd76f153c.png) |
-| 当前选中数据标识 | $app.dataset.state.dataId         | string   | ![img](https://qcloudimg.tencent-cloud.cn/raw/e2bb23b1fd65e2dfd80bf0e1065932fc.png) |
-| 职位总数         | $app.dataset.state.totalSize      | number   | ![img](https://qcloudimg.tencent-cloud.cn/raw/0c9979dc0de4263a0427b03ddb714ca7.png) |
-| 页码             | $page.dataset.state.pageNo        | number   | ![img](https://qcloudimg.tencent-cloud.cn/raw/3b1848d520cb6d3a21a4b54a1ee3ce2f.png) |
-| 职位列表         | $page.dataset.state.jobList       | 模型变量 | ![img](https://qcloudimg.tencent-cloud.cn/raw/996a6f92cafa8f5d88afa369487acd06.png) |
-| 公司信息         | $page.dataset.state.introduce     | 模型变量 | ![img](https://qcloudimg.tencent-cloud.cn/raw/dabf8b14df0a8a98449e101be49bdf17.png) |
-| 职位信息详情     | $page.dataset.state.jobDetail     | 模型变量 | ![img](https://qcloudimg.tencent-cloud.cn/raw/d89a66e0412e7c3a603ce5e1fd8806eb.png) |
-| 简历是否已投递   | $page.dataset.state.isSubmit      | boolean  | ![img](https://qcloudimg.tencent-cloud.cn/raw/62bafa9a5a83e5d317fbcb7849798b3c.png) |
-| 关键字           | $page.dataset.state.keyWords      | string   | ![img](https://qcloudimg.tencent-cloud.cn/raw/412caa191fa0ea596eb4f6885f0729ac.png) |
-| 查询返回结果     | $page.dataset.state.searchResults | 模型变量 | ![img](https://qcloudimg.tencent-cloud.cn/raw/7f3530aeb667821b6d27afc23e3aba64.png) |
-
-
-
-
-
-## **首页页面搭建**
-
-### **图标页面跳转至公司简介页面**
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/d4331ac33ab1cc45b45de124f1a09d6a.png)                              
-
-在对应容器中绑定页面跳转事件
-
-
-
-### **搜索框跳转至搜索页面**
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/27f3c82a010349853f11a462198e3df4.png)       
-
-​               ![img](https://qcloudimg.tencent-cloud.cn/raw/398d647e0c5126e6a463394470375d46.png)
-
-在搜索框的普通容器上绑定事件，设置页面的跳转                 ![img](https://qcloudimg.tencent-cloud.cn/raw/33605bf67cb1187ab2fa8c6485aaf41b.png)        
-
-跳转成功后，对全局变量totalSize进行赋值                 ![img](https://qcloudimg.tencent-cloud.cn/raw/81815df4e26e86162e179b80bd9f6ed8.png)        
-
-### **职位列表展示及跳转详情页**
-
-职位列表展示：页面加载时，拉取模型变量jobList，通过列表项绑定数组进行循环职位信息；
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/d8ab353a2706eeeed4c4d957a552593b.png)
-
-​        
-
-跳转对应详情页：         
-
-​        ![img](https://qcloudimg.tencent-cloud.cn/raw/d8ab353a2706eeeed4c4d957a552593b.png)             
-
-​            ![img](https://qcloudimg.tencent-cloud.cn/raw/dcb0b00a01a33bccbd6103d768428575.png)
-
-​        
-
-在列表项中绑定图中事件，当点击某一职位信息时，将对应的职位ID和数据标识赋值给全局变量jobId及dataId，赋值成功后跳转页面至职位详情页
-
-数据标识赋值dataId：
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/9c9d6f94161483b73ff229341101e01b.png)        
-
-职位ID赋值jobId：
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/a5f58ea2273dbe05f19bde8bf0ae9de2.png)        
-
-页面跳转：
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/e02d1c14272b99676ae5cd01617b780b.png)        
-
-### **上拉刷新**
-
- 使用滚动容器包裹列表项组件整块内容
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/d969dcbe32e635bb7f00b2365b7ef49d.png)       
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/9672d35d500b6d3f80310ccf20dadaf1.png)
-
-​        
-
-并在滚动容器滚动到底部时绑定事件：首先给页码pageNo进行赋值加1；
-
-赋值成功后，以最新的pageNo和为6的pageSize数据大小作为参数      
-
-​         ![img](https://qcloudimg.tencent-cloud.cn/raw/1479375ab7232dde86f9cc640cdd1036.png)        
-
-调用招聘位置数据源的wedaGetRecords方法，获取另一页码的数据；
-
-调用数据源成功后将原有的joblist数据和新拉取的数据进行合并
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/bcb6598aa89281bccd6b165151377f7c.png)        
-
-即可更新渲染到到列表项组件。
-
-## **职位详情页面搭建**
-
-### **职位详情展示及按钮投递状态**
-
-职位详情展示：    
-
-​             ![img](https://qcloudimg.tencent-cloud.cn/raw/eefd92878682c004d38dbe68ba893ee8.png)        
-
-当页面初始加载时，模型变量jobDetail会获取全局变量dataId数据标识作为参数，拉取对应的职位详情
-
-按钮投递状态：        
-
-​        ![img](https://qcloudimg.tencent-cloud.cn/raw/9e3b8aba61e41a64d2b4d01078a35888.png)        
-
-通过jobDetail中的deliveryStatus作为判断是否按钮的禁用状态，若无禁用则点击后跳转至简历投递页面
-
-
-
-## **简体投递页面搭建**
-
-### **（1）表单容器绑定及改造**
-
-整体为一个表单容器
-
-​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/7470d0b01b063529a258c9e866562503.png)    
-
-表单容器绑定：        
+- **小程序：**候选人在小程序端查看招聘岗位，并提交简历申请。
+- **模型应用：**
+<dx-steps>
+-HR 发布招聘 JD
+-通过简历库对简历进行筛选
+-将简历推送给面试官
+-面试官收到简历对简历进行操作（拒绝/预约面试）
+-推送面试通知给候选人
+-面试官面试并在系统添加面试记录
+</dx-steps>
+
+
+
+## 面试管理 B 端搭建步骤
+
+### 步骤1：搭建所需资源
+按照下表业务场景拆解，在微搭平台搭建需要的资源。
+<table>
+<thead>
+<tr>
+<th><strong>资源</strong></th>
+<th><strong>说明</strong></th>
+</tr>
+</thead>
+<tbody><tr>
+<td><a href = "https://console.cloud.tencent.com/lowcode/app">应用</a></td>
+<td>招聘小程序面试管理（模型应用）</td>
+</tr>
+<tr>
+<td><a href = "https://console.cloud.tencent.com/lowcode/datasource/model">数据模型</a></td>
+<td><ul style = "margin-bottom: 0px;"><li>公司介绍：增/删/改/查</li>
+<li>招聘职位：增/删/改/查</li>
+<li>简历：增/删//查/推给负责人/约面试/拒绝/发 offer</li>
+<li>面试记录（和简历为主子关系）：增/删/改/查</li></ul></td>
+</tr>
+<tr>
+<td><a href = "">模型页面（面试管理）</a></td>
+<td><ul style = "margin-bottom: 0px;"><li>首页 ：统计相关</li>
+<li>招聘职位：增删改查页面</li>
+<li>简历： 增删改查页面</li>
+<li>面试记录：增删改查页面</li></ul>
+</td>
+</tr>
+<tr>
+<td><a href = "">自定义页面（招聘小程序）</a></td>
+<td>JD 详情提交简历</td>
+</tr>
+<tr>
+<td><a href = "">流程</a></td>
+<td>面试流程</td>
+</tr>
+<tr>
+<td><a href = "">用户角色</a></td>
+<td><ul style = "margin-bottom: 0px;"><li>外部用户：候选人</li>
+<li>角色：HR、业务负责人</li></ul></td>
+</tr>
+</tbody></table>
+
+
+
+
+### 步骤2：资源配置
+在微搭平台按照步骤逐步配置以下资源。
+#### 创建数据模型
+1. 进入**微搭控制台** > [**数据模型**](https://console.cloud.tencent.com/lowcode/datasource/model) 页面，单击**新建数据模型**，创建**公司介绍**数据模型，并创建公司介绍所需的相关字段，按照相同步骤分别创建**招聘职位**简历**面试记录**。
+![](https://qcloudimg.tencent-cloud.cn/raw/9531acf66c3cab8add8479a3feeb7919.png)
+2. 需要特别关注：
+ - **简历**数据表和**招聘职位**数据表是关联关系，需要在**简历**中创建关联关系字段**关联职位**，并关联至**招聘职位**表。
+ - **面试记录**数据表和**简历**数据表是关联关系，需要在**面试记录**中创建关联关系字段**关联用户**，并关联至**简历**表。
+![img](https://qcloudimg.tencent-cloud.cn/raw/84ebb616a073d9411ab3e660fa7d44dd.png)        
+
+#### 创建流程
+1. 进入**微搭控制台** > [**工作流**](https://console.cloud.tencent.com/lowcode/flow) 页面，单击**新建流程**创建**简历筛选**流程，选择**数据触发流**，触发方法为**更新**，将**简历状态**等于**2**作为**触发条件**。
+![img](https://qcloudimg.tencent-cloud.cn/raw/16ce4e0130d23379764ac9ae56dec936.png)        
+2. 工作流审批节点为角色审批，审批通过时修改**简历状态**为**3**，驳回时修改简历状态为**6**。
+![img](https://qcloudimg.tencent-cloud.cn/raw/5f027e29f5f4505a615766bc92857b5d.png)        
+
+#### 创建页面
+1. 通过数据模型生成对应的增、删、改、查页面。在简历列表页面增加**推送**、**拒绝**。拒绝按钮增加自定义方法修改简历状态为“6”，推送按钮增加自定义方法修改简历状态为“2”。
+![](https://qcloudimg.tencent-cloud.cn/raw/b2fe640a50d27635a2f184a67b2bebd8.png)  
+2. 创建自定义页面作为首页，用于统计数据的展示。
+![img](https://qcloudimg.tencent-cloud.cn/raw/a750cbf443794577b626486b70c22e71.png)        
+
+
+
+## 面试模板 C 端搭建步骤
+
+### 步骤1：设定相关的变量字段
+进入**应用编辑器** > **首页**，单击左上角**变量**，按照下表设置相关变量字段。                 
+![img](https://qcloudimg.tencent-cloud.cn/raw/bebeba2ab608b6060bdead14fa1a1506.png)        
+
+<table>
+<thead>
+<tr>
+<th>字段名称</th>
+<th>字段标识</th>
+<th>变量类型</th>
+<th>定义操作图</th>
+</tr>
+</thead>
+<tbody><tr>
+<td>当前选中职位ID</td>
+<td>$app.dataset.state.jobId</td>
+<td>string</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/2aa6744cfd134c96dba65c5fd76f153c.png" alt="img"></td>
+</tr>
+<tr>
+<td>当前选中数据标识</td>
+<td>$app.dataset.state.dataId</td>
+<td>string</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/e2bb23b1fd65e2dfd80bf0e1065932fc.png" alt="img"></td>
+</tr>
+<tr>
+<td>职位总数</td>
+<td>$app.dataset.state.totalSize</td>
+<td>number</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/0c9979dc0de4263a0427b03ddb714ca7.png" alt="img"></td>
+</tr>
+<tr>
+<td>页码</td>
+<td>$page.dataset.state.pageNo</td>
+<td>number</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/3b1848d520cb6d3a21a4b54a1ee3ce2f.png" alt="img"></td>
+</tr>
+<tr>
+<td>职位列表</td>
+<td>$page.dataset.state.jobList</td>
+<td>模型变量</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/996a6f92cafa8f5d88afa369487acd06.png" alt="img"></td>
+</tr>
+<tr>
+<td>公司信息</td>
+<td>$page.dataset.state.introduce</td>
+<td>模型变量</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/dabf8b14df0a8a98449e101be49bdf17.png" alt="img"></td>
+</tr>
+<tr>
+<td>职位信息详情</td>
+<td>$page.dataset.state.jobDetail</td>
+<td>模型变量</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/d89a66e0412e7c3a603ce5e1fd8806eb.png" alt="img"></td>
+</tr>
+<tr>
+<td>简历是否已投递</td>
+<td>$page.dataset.state.isSubmit</td>
+<td>boolean</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/62bafa9a5a83e5d317fbcb7849798b3c.png" alt="img"></td>
+</tr>
+<tr>
+<td>关键字</td>
+<td>$page.dataset.state.keyWords</td>
+<td>string</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/412caa191fa0ea596eb4f6885f0729ac.png" alt="img"></td>
+</tr>
+<tr>
+<td>查询返回结果</td>
+<td>$page.dataset.state.searchResults</td>
+<td>模型变量</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/7f3530aeb667821b6d27afc23e3aba64.png" alt="img"></td>
+</tr>
+</tbody></table>
+
+
+
+
+
+
+### 步骤2：首页页面搭建
+
+1. 在对应容器中绑定页面跳转事件，实现图标页面跳转至公司简介页面。
+![](https://qcloudimg.tencent-cloud.cn/raw/6a4ca4109ed1925b0e860e22179de52d.png)            
+2. 通过搜索框跳转至搜索页面。
+![](https://qcloudimg.tencent-cloud.cn/raw/b78c4290567bb429d069a5e5984a7d9a.png)
+在搜索框的普通容器上绑定事件，设置页面的跳转。
+![](https://qcloudimg.tencent-cloud.cn/raw/acad7524ce903fbc20f5a8424843b10b.png)
+跳转成功后，对全局变量 totalSize 进行赋值。
+![](https://qcloudimg.tencent-cloud.cn/raw/51283ebb851885e43e1f1eae927ba8be.png)
+3. 实现职位列表展示及跳转详情页：
+ - 职位列表展示：页面加载时，拉取模型变量 jobList，通过列表项绑定数组进行循环职位信息。
+![](https://qcloudimg.tencent-cloud.cn/raw/73bd4395620e35df80eadd493d983e60.png)
+ - 跳转对应详情页：         
+![](https://qcloudimg.tencent-cloud.cn/raw/5e4ed38a43690e3bbb6d63afacb75f60.png)
+在列表项中绑定图中事件，当单击某一职位信息时，将对应的职位ID和数据标识赋值给全局变量 jobId 及 dataId，赋值成功后跳转页面至职位详情页。
+	 - 数据标识赋值 dataId：
+![](https://qcloudimg.tencent-cloud.cn/raw/2b4d67ed42e794dfe0727d3591e2b76b.png)
+    - 职位 ID 赋值 jobId：
+![](https://qcloudimg.tencent-cloud.cn/raw/560c2cda9e7014b1ec3c201c7cd8b651.png)
+		- 页面跳转：
+![](https://qcloudimg.tencent-cloud.cn/raw/e3753903ecb379110c8f1164f8c2687b.png)
+4. 搭建上拉刷新功能：
+ 1. 使用滚动容器包裹列表项组件整块内容
+![](https://qcloudimg.tencent-cloud.cn/raw/4f05e6dde7ebb2b1f0ce86c5a9e00421.png)
+ 2. 并在滚动容器滚动到底部时绑定事件：
+	 - 首先给页码pageNo进行赋值加1。
+![](https://qcloudimg.tencent-cloud.cn/raw/6670405d772c8720b1135f7aaed150ad.png)
+		- 赋值成功后，以最新的 pageNo 和为6的 pageSize 数据大小作为参数。
+![](https://qcloudimg.tencent-cloud.cn/raw/0ccca5e9b7ae6f1c4695f75af465bc61.png)
+调用招聘位置数据源的 wedaGetRecords 方法，获取另一页码的数据。
+		- 调用数据源成功后将原有的 joblist 数据和新拉取的数据进行合并。即可更新渲染到到列表项组件。
+![](https://qcloudimg.tencent-cloud.cn/raw/797def057ad30100b9547bc8cb4fd571.png)
+
+
+
+### 步骤3：职位详情页面搭建
+
+1. 实现职位详情展示及按钮投递状态：
+	- 职位详情展示：    
+当页面初始加载时，模型变量 jobDetail 会获取全局变量 dataId 数据标识作为参数，拉取对应的职位详情。
+![](https://qcloudimg.tencent-cloud.cn/raw/81d188f2b72758a2e03ef0f68bf8b7e4.png)
+	- 按钮投递状态：        
+通过 jobDetail 中的 deliveryStatus 作为判断是否按钮的禁用状态，若无禁用则点击后跳转至简历投递页面。
+![](https://qcloudimg.tencent-cloud.cn/raw/e23e6f65a8add1771f6985f3c387e1b5.png)
+
+
+
+
+
+### 步骤4：简体投递页面搭建
+
+1. 表单容器绑定及改造：
+整体为一个表单容器，效果如下：
+<img src = "https://qcloudimg.tencent-cloud.cn/raw/efbcc4f7c265cba9714e79d7212ad938.png" style = "width:50%"> 
+	- 表单容器绑定：        
 
 ​         ![img](https://qcloudimg.tencent-cloud.cn/raw/9f66a13472bb671144e4ceac63bbd593.png)        
 
@@ -200,7 +240,7 @@
 
 可更换表单容器中组件的顺序，且可添加需要的组件（文本组件）
 
-### **表单容器事件的绑定**
+2. 表单容器事件的绑定
 
 ​                 ![img](https://qcloudimg.tencent-cloud.cn/raw/d4c88eede99d15e8d1bf48f3a2d7d158.png)        
 
