--- a/product/监控与管理/访问控制/最佳实践.md
+++ b/product/监控与管理/访问控制/最佳实践.md
@@ -26,8 +26,8 @@
 - 建议同一个子账号不同时管理用户、权限和资源。应该让部分子账户管理用户，部分子账号管理权限，部分子账号管理其他云资源。
 
 - 不建议为一个 CAM 用户同时创建用于控制台操作的登录密码和用于 API 调用的访问密钥。具体如下：
-	- 应用程序账号：只需要通过 API 访问资源，创建访问密钥即可。
-	- 员工账号：只需要通过控制台操作资源，设置登录密码即可。
+	- 编程访问：只需要通过 API 访问资源，创建访问密钥即可。
+	- 腾讯云控制台访问：只需要通过控制台操作资源，设置登录密码即可。
 
 
 
