--- a/product/企业应用/腾讯问卷/常见问题/常见问题.md
+++ b/product/企业应用/腾讯问卷/常见问题/常见问题.md
@@ -132,7 +132,7 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 - 电脑端
 腾讯问卷可以通过对问卷的**显示、回收、奖品、协同编辑**进行精细化的设置，您可以根据自身需求对相应的功能进行开关，实现智能、灵活的在线问卷管理。
 进入问卷编辑页，单击左上角**设置**，见下图：
-<img style="width:800px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/8cf48fb6457f1494b4c7eec23d334678.png" />
+<img style="width:600px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/8cf48fb6457f1494b4c7eec23d334678.png" />
 
  - [问卷显示](https://cloud.tencent.com/document/product/1304/49143#.E9.97.AE.E5.8D.B7.E6.98.BE.E7.A4.BA)
  - [回收设置](https://cloud.tencent.com/document/product/1304/49143#.E5.9B.9E.E6.94.B6.E8.AE.BE.E7.BD.AE)
@@ -141,13 +141,13 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 
 - 移动端
 单击问卷编辑界面左下角的**设置**，进入问卷设置界面。手机端目前支持设置**答题需要登录验证**、**每个用户只能回答一次**、**获取用户位置信息**、**允许用户修改答案**、**问卷回收提醒**和**每日打卡**等功能。
-<img style="width:400px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/2319fe35114c0227079bc5b0bed3c8eb.png" />
+<img style="width:200px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/2319fe35114c0227079bc5b0bed3c8eb.png" />
 
  - 企业微信手机端 App 还支持开启**限定答题白名单**。
    1. 进入问卷设置界面，开启**限定答题白名单**。
    2. 单击**选择用户范围**：选择**全公司**或单击**部分成员** > **添加用户**，调用企业微信通讯录名单选择指定用户。
   
-	<img style="width:400px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/51d587f413ce7016cc0b171e96c10d5e.png" />
+	<img style="width:200px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/51d587f413ce7016cc0b171e96c10d5e.png" />
 >?请先在企业微信**应用设置** > **可见范围**里加入需要添加的白名单账号。
 
 
@@ -216,16 +216,13 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 腾讯问卷支持通过电脑端跟移动端两种操作步骤：
 - 电脑端：
  - 步骤1：登录官网
-在 PC 端浏览器访问 [腾讯问卷官网](https://wj.qq.com)，单击页面右上角**登录**后，将跳转至服务协议，请仔细阅读，并单击同意即可。<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/530003f5f757bd281463f56f6b9bdbdd.png" />
+在 PC 端浏览器访问 [腾讯问卷官网](https://wj.qq.com)，单击页面右上角**登录**后，将跳转至服务协议，请仔细阅读，并单击同意即可。<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/9dddba3f97eb4cb5fa674bc2b735c376.png" />
  - 步骤2：选择登录方式
 在登录界面选择 QQ、微信、企业微信，通过 App 扫码登录，或使用 QQ 账号密码登录。
-<img style="width:300px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/139b3f9a3bb5923d11d1a804d160f578.png" />
+<img style="width:300px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/558220ecdee922a65b959d15f2ea9c9c.png" />
  - 步骤3：新建问卷
 选择相应账号登录后，进入腾讯问卷工作台，您可单击新建 +，选择新建问卷，即可进入“创建问卷”页面。
-<img style="width:800px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/db3f521c0184a81914179080a26c2e51.png" />
- - 步骤4：开始使用
-单击创建空白问卷下方的开始，进入问卷“编辑”界面。您可以根据需求自定义问卷。
-<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/e169de7932acde0b10aaf9d0355d9398.png" />
+<img style="width:800px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/1251c3b8455ad4d892236de76fe77a1d.png" />
 - 移动端：
  - 微信公众号登录
      1. 在手机微信里搜索公众号“腾讯问卷”并关注。
@@ -238,11 +235,11 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 <img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/f8ba13ec513a7c188b4f4fc58b39f1b8.png" />
 
 
-### 腾讯问卷团队版套餐可使用人数是什么意思	
+### 腾讯问卷团队版套餐可使用人数是什么意思？
 腾讯问卷团队版套餐**可使用人数**是指可以使用问卷团队版功能进行创建、编辑等操作的人数，请您知悉。
 
 
-### 腾讯问卷各版本计费方式	
+### 腾讯问卷各版本计费方式？
 腾讯问卷分为三个版本，其定价方式如下：
 **免费版**可以直接访问 [腾讯问卷官网](https://wj.qq.com/) 使用，无需购买。
 团队版计费使用包年包月 + 按量计费的付费模式，其中团队版功能按可使用人数分为不同档次的套餐，每一种套餐以包年包月的方式计费。而短信资源包则以按量的方式计费。
@@ -252,14 +249,14 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 私有部署版本根据用户具体功能需求，按成本评估定价，请先 [联系客服](https://cloud.tencent.com/document/product/1304/49115) 咨询。
 
 
-### 如何购买腾讯问卷团队版	
+### 如何购买腾讯问卷团队版？
 腾讯问卷团队版购买步骤如下：
 >!由于购买腾讯问卷团队版需关联腾讯云账号，请先注册/登录腾讯云账号
 
 - 电脑端：
  - 步骤1：登录官网
 在 PC 端进入 [腾讯问卷官网](https://wj.qq.com)，单击**登录**或**免费使用**。
-<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/68837aea9428aecb8bf81d22c9e8a346.png" />
+<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/cec720e3075b7bfa44f8e1b587443e1d.png" />
  - 步骤2：选择登录方式
 在登录界面选择 QQ、微信、企业微信，通过 App 扫码登录，或使用 QQ 账号密码登录。
 <img style="width:300px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/516f7e789486f14e0f5223a4afa8219c.png" />
