--- a/product/计算与网络/云服务器/运维指南/其他/获取实例登录记录.md
+++ b/product/计算与网络/云服务器/运维指南/其他/获取实例登录记录.md
@@ -7,7 +7,7 @@
 <dx-tabs>
 ::: Linux 实例
 <dx-alert infotype="explain" title="">
-本文 Linux 实例操作系统以系统镜像 TencentOS Server 3.1 (TK4) 为例，不同版本操作系统步骤有一定区别，请您结合实际情况进行操作。
+本文 Linux 实例操作系统以 TencentOS Server 3.1 (TK4) 为例，不同版本操作系统步骤有一定区别，请您结合实际情况进行操作。
 </dx-alert>
 
 1. [使用标准登录方式登录 Linux 实例](https://cloud.tencent.com/document/product/213/5436)。
@@ -26,15 +26,15 @@
  - 执行命令 `lastb`，通过 `/var/log/btmp` 查看所有登录系统失败的用户的信息。返回结果如下图所示：
 ![](https://qcloudimg.tencent-cloud.cn/raw/2208f07aba6e73fa4de6959844d38ca5.png)
  - 执行命令 `lastlog`，通过 `/var/log/lastlog` 查看用户最后一次登录的信息。返回结果如下图所示：
-![](https://qcloudimg.tencent-cloud.cn/raw/4f967ab0d7e007f3dbe8479d83386119.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/85e42c825afa0bab0e1b25e18895ac52.png)
  - 执行命令 `cat /var/log/secure`，查看登录信息。返回结果如下图所示：
- ![](https://qcloudimg.tencent-cloud.cn/raw/f0d6833862419e8633a11d840ee40b9b.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/d75c5db721f325d56ed0ba7dd4a20c7b.png)
  
 :::
 ::: Windows 实例
 
 <dx-alert infotype="explain" title="">
-本文 Windows 实例操作系统以系统镜像 Windows Server 2012 R2 中文版为例，不同版本操作系统步骤有一定区别，请您结合实际情况进行操作。
+本文 Windows 实例操作系统以 Windows Server 2012 R2 中文版为例，不同版本操作系统步骤有一定区别，请您结合实际情况进行操作。
 </dx-alert>
 
 
