--- a/product/存储与CDN/全球应用加速/获取客户真实IP/通过TOA获取客户端真实 IP/Linux后端版本调用/常见问题.md
+++ b/product/存储与CDN/全球应用加速/获取客户真实IP/通过TOA获取客户端真实 IP/Linux后端版本调用/常见问题.md
@@ -1,4 +1,4 @@
-### 签名报错，比如 module verification failed: signature and/or required key missing - tainting kernel
+### 签名报错，例如 module verification failed: signature and/or required key missing - tainting kernel
 
 - 解决：linux 内核会有对模块有签名校验，取决于编译内核时候是否开启此特性 
 - 解决方法一：编译内核时，去掉签名支持 CONFIG_MODULE_SIG=n
