--- a/product/存储与CDN/全球应用加速/获取客户真实IP/通过TOA获取客户端真实 IP/Linux后端版本调用/常见问题.md
+++ b/product/存储与CDN/全球应用加速/获取客户真实IP/通过TOA获取客户端真实 IP/Linux后端版本调用/常见问题.md
@@ -12,5 +12,5 @@
 -	解决：常见以下三种情况
 -	没安装有内核包
 -	路径被修改过，需要自行纠正下
--	安装的内核没有 build 目录，需手动软连接到对应版本内核的 header，比如
+-	安装的内核没有 build 目录，需手动软连接到对应版本内核的 header，例如
 cd /lib/modules/4.9.0-13-amd64 && ln -s /usr/src/linux-headers-4.9.0-13-amd64 build
