--- a/product/互联网中间件/TDMQ RabbitMQ 版/00 产品动态.md
+++ b/product/互联网中间件/TDMQ RabbitMQ 版/00 产品动态.md
@@ -9,7 +9,7 @@
 <td>监控全面升级</td>
 <td>TDMQ RabbitMQ 版全面更新监控面板，新的监控面板支持集群-vhost-Exchange/Queue的全层级的监控指标，并增加了数十个用于状态诊断、问题定位的监控指标，如生产P95/P99/P999时延等。</td>
 <td>2022-04-28</td>
-<td><a href="">监控告警</a></td>
+<td><a href="https://cloud.tencent.com/document/product/1495/73581">监控告警</a></td>
 </tr></table>
 
 
