--- a/product/存储与CDN/全球应用加速/获取客户真实IP/通过Proxy Protocol获取客户端真实IP/操作步骤.md
+++ b/product/存储与CDN/全球应用加速/获取客户真实IP/通过Proxy Protocol获取客户端真实IP/操作步骤.md
@@ -36,10 +36,10 @@ PROXY TCP4 1.1.1.2 2.2.2.2 12345 80\r\n
 ```
 
 
-## 步骤三：查看Client Ip
+## 步骤三：查看 Client IP
 
-参考方法一：直接在nginx 日志中查看（日志路径：/var/log/nginx/access.log）
+参考方法一：直接在 nginx 日志中查看（日志路径：/var/log/nginx/access.log）
 
-参考办法二： 执行命令nc -l port 查看
+参考办法二： 执行命令 nc -l port 查看
 
 ![](https://qcloudimg.tencent-cloud.cn/raw/9a5326eb6c60fca084f625199098edbf.png)
