--- a/product/企业应用/腾讯问卷/常见问题/常见问题.md
+++ b/product/企业应用/腾讯问卷/常见问题/常见问题.md
@@ -12,7 +12,7 @@
 ### 如何导出文本或图片的附件数据？
 文本数据请直接导出原始数据，附件题数据请进入统计图表找到相应的题目分别点题目右侧**导出所有文件**。
 
-### 怎么批量导入题目
+### 怎么批量导入题目？
 1. 如果已有设计好的 Word 问卷，需先到 TXT 文档（因 Word 有自带格式），然后单击**创建问卷**界面的**文本编辑问卷**，将题目粘贴到左侧的文本编辑区，再参考右下方的**查看编辑示例**修改题目格式。
 2. 在**创建问卷**界面找到**从 Excel导入数据**，并自动生成问卷，单击右侧的**开始**>**下载 Excel 模板**，根据模板要求编辑好题目后，单击**添加文件**上传相应 Excel 文档可生成问卷。
 >?建议使用文本编辑模式。
@@ -25,7 +25,7 @@
 - 手机端进入腾讯问卷公众号，单击菜单栏**用户中心**>**帮助中心**，在搜索框输入您需要查找的关键字，单击**搜索**图标，即可快速查找您想要的内容。
 - 电脑上登录 [腾讯文档](https://wj.qq.com/)，进入**帮助中心**。
 
-### 无法获取QQ号？
+### 无法获取 QQ 号？
 - QQ 互联登录上线后，只能够获取到用户的 QQ ID，所以会显示为3000等开头的虚拟数值。
 - 如需获取用户 QQ 号，请在问卷中添加 QQ 号题目并设置为必填项。
 
@@ -56,7 +56,7 @@
 
 
 
-### 腾讯问卷如何购买	
+### 腾讯问卷如何购买？	
 **腾讯问卷免费版**可以直接访问 [腾讯问卷官网](https://wj.qq.com/) 使用，无需购买。
 **腾讯问卷企业版购买指引：**
 1. [注册腾讯云 ](https://cloud.tencent.com/document/product/378/17985)账号并完成[ 实名认证](https://cloud.tencent.com/document/product/378/3629)。
@@ -77,10 +77,25 @@
 资源包套餐为可选计费项，目前短信资源仅提供固定套餐包，每种套餐按量可以购买1-10份。详情如下所示：
 **团队版套餐定价**
 根据企业版功能的可用人数划分为6个档次套餐，用户可以根据企业规模和使用人数进行选择，每个套餐包含相应的 短信（即将上线）、存储空间（即将上线）。
-![](https://qcloudimg.tencent-cloud.cn/raw/03d70bc0e861218c2b967354dceb26c2.png)
+
+| 套餐类型 | 包年价格（元） | 包月价格（元） |可用人数上限（人） |国内短信量（条） |储存空间 |通讯录人数（人） |
+|---------|---------|---------|---------|---------|---------|---------|
+| 基础套餐（20人） | 1399 | 139 |20 |1000（年）/100（月）|10G |不限 |
+| 标准套餐（100人） | 1999 | 199 |100 |1000（年）/100（月） |20G |不限 |
+| 畅享套餐（500人） | 3199 | 319 |500 |1500（年）/150（月） |50G |不限 |
+| 畅享套餐（1000人） | 4999 | 499 |1000 |1500（年）/150（月） |100G |不限 |
+| 畅享套餐（5000人） | 7399 | 739 |5000 |2000（年）/200（月） |200G |不限 |
+| 尊享套餐（不限人数） | 9399 | 939 |不限 |2000（年）/200（月 |500G |不限 |
+
 **短信资源包定价**（即将上线）
 短信资源包中设置4档固定条数套餐，每一档套餐支持购买1-10份，可根据需要与企业版套餐组合购买或使用过程中单独购买。
-![](https://qcloudimg.tencent-cloud.cn/raw/215af05e3cbcc972a5cd6e13c7bac297.png)
+
+| 短信套餐（条） | 套餐价格（元） | 单价（元/条） |
+|---------|---------|---------|
+| 100 | 10 | 0.1 |
+| 1000 | 90 | 0.09 |
+| 5000 | 400 | 0.08 |
+| 1万 | 700 | 0.07 |
 >?短信资源包可以发送问卷和答题提醒。
 
 
@@ -153,7 +168,7 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 
 
 
-### 腾讯问卷管理问卷	
+### 腾讯问卷管理问卷
 - 电脑端
 问卷编辑、预览完成后，一份在线问卷即完成，此时您可以通过对问卷的复制、编辑、删除、发布、统计、导出、分享等功能，实现对问卷的全面管理。
 [视图管理](https://cloud.tencent.com/document/product/1304/49146#.E8.A7.86.E5.9B.BE.E7.AE.A1.E7.90.86)：我的问卷页分两种视图展示问卷：网格视图和列表视图，可自由切换。
@@ -170,9 +185,9 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
     - 开始回收：问卷已生成有效链接，即填写者可以通过链接回答并提交问卷，标题前绿色小圆点标识。
 
 
-### 腾讯问卷如何预览问卷	
-问卷编辑完成后，您可以通过预览来检查问卷编辑效果，也可以将问卷链接或二维码发送给其他人进行检查确认，从而保证编辑的准确性，腾讯问卷支持多终端自适应，可以直接在电脑、手机端查看预览效果。
-![image.png](https://img-cdn.wezhuiyi.com/yibot/456786921/images/rrwfoiw814jdh27fl2w0p.png)
+### 腾讯问卷如何预览问卷？
+问卷编辑完成后，您可以通过左边**预览**来检查问卷编辑效果，单击右边**试答问卷**可以检验试卷，也可以将问卷链接或二维码发送给其他人进行检查确认，从而保证编辑的准确性，腾讯问卷支持多终端自适应，可以直接在电脑、手机端查看预览效果。
+![](https://qcloudimg.tencent-cloud.cn/raw/e862ff47a1946e2329357a18c2a17d94.png)
 单击问卷编辑页右上角的**预览**，即可看到两种终端预览效果：手机预览和电脑预览。问卷会根据不同的终端（电脑/手机）自适应。您也可以在预览页通过**分享**将问卷发送给其他人查阅。
 >! 暂停回收状态下提交的问卷数据不会被记录，请务必单击**开始回收**后再分享问卷。
 
@@ -183,12 +198,12 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 
 ### 腾讯问卷如何投放问卷？	
 - 在电脑端**编辑**界面完成问卷编辑后，单击左上角**投放**，进入投放界面后单击右上角**开始回收**。
- - 可直接复制问卷的链接发给填写人员，或单击**下载二维码**保存图片分享。也可用手机扫描问卷二维码，进入问卷答题界面后，单击右上角 **···** 分享至微信/企业微信/QQ端或朋友圈。
- - 链接下的图标依次为：微信、微信小程序、QQ、QQ空间、新浪微博五个渠道，可直接单击任一图标将问卷分享到相应渠道。
+ - 可直接复制问卷的链接发给填写人员，或单击**下载二维码**保存图片分享。也可用手机扫描问卷二维码，进入问卷答题界面后，单击右上角 **···** 分享至微信/企业微信/QQ 端或朋友圈。
+ - 链接下的图标依次为：微信、微信小程序、QQ、QQ 空间、新浪微博五个渠道，可直接单击任一图标将问卷分享到相应渠道。
 - 手机端编辑完问卷后，单击底部**开始回收**，会自动跳转到回收界面，然后单击**分享问卷**。
  - 单击**复制链接**发送给填写人员。
  - 单击**小程序码**保存图片分享。
- - 单击 **···** 分享至微信/企业微信/QQ端或朋友圈。
+ - 单击 **···** 分享至微信/企业微信/QQ 端或朋友圈。
 
 
 ### 腾讯问卷如何创建问卷？	
@@ -205,7 +220,7 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 ### 腾讯问卷使用出现敏感字怎么处理	
 可在新编辑器题目设置里设置为敏感信息收集题即可去除敏感提示。
 
-### 怎么删除自己填写过的腾讯问卷？	
+### 如何删除问卷页？	
 鼠标选中问卷页签，单击**×**即可删除该页及上面的所有题目。
 ![](https://qcloudimg.tencent-cloud.cn/raw/b7e114822ec4dc91f9db5577befd3ebc.png)
 >?删除页同时也会删除该页上的所有题目，请谨慎操作。暂不支持整页复制功能。
@@ -222,17 +237,17 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 <img style="width:300px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/558220ecdee922a65b959d15f2ea9c9c.png" />
  - 步骤3：新建问卷
 选择相应账号登录后，进入腾讯问卷工作台，您可单击新建 +，选择新建问卷，即可进入“创建问卷”页面。
-<img style="width:800px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/1251c3b8455ad4d892236de76fe77a1d.png" />
+<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/1251c3b8455ad4d892236de76fe77a1d.png" />
 - 移动端：
  - 微信公众号登录
      1. 在手机微信里搜索公众号“腾讯问卷”并关注。
      2. 单击**我的问卷**。
      3. 选择 **QQ 登录**或**微信登录**，自动进入**我的问卷**界面。
-<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/b89f2e03412508b6465bfed5eef3fd01.png" />
+<img style="width:600px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/b89f2e03412508b6465bfed5eef3fd01.png" />
  - 微信小程序登录
     1. 在手机微信里搜索小程序“腾讯问卷”。
-    2. 单击**腾讯问卷**，自动进入**我的问卷**界面。
-<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/f8ba13ec513a7c188b4f4fc58b39f1b8.png" />
+    2. 单击**腾讯问卷**，自动进入**我的问卷**界面。 <br>           
+<img style="width:600px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/f8ba13ec513a7c188b4f4fc58b39f1b8.png" />
 
 
 ### 腾讯问卷团队版套餐可使用人数是什么意思？
