--- a/product/大数据与AI/自定义模块文字识别/常见问题.md
+++ b/product/大数据与AI/自定义模块文字识别/常见问题.md
@@ -28,4 +28,4 @@
 
 智能结构化是针对不同识别区内容类型进行专项优化的识别模型，本阶段产品标准印刷体（支持中英文）。
 
-更多关于文字识别的问题，您可以查看 文字识别常见问题说明。
+更多关于文字识别的问题，您可以查看 [文字识别常见问题说明](https://cloud.tencent.com/document/product/866/33510)。
