--- a/product/企业应用/腾讯问卷/常见问题/常见问题.md
+++ b/product/企业应用/腾讯问卷/常见问题/常见问题.md
@@ -68,8 +68,6 @@
 
 
 
-
-
 ### 腾讯问卷定价说明
 **定价方案**
 腾讯问卷团队版的计费主要包括：团队版套餐和资源包套餐。
@@ -236,7 +234,7 @@ Android 手机会自动跳转到浏览器打开，iOS 手机需点右上角 **..
 在登录界面选择 QQ、微信、企业微信，通过 App 扫码登录，或使用 QQ 账号密码登录。
 <img style="width:300px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/558220ecdee922a65b959d15f2ea9c9c.png" />
  - 步骤3：新建问卷
-选择相应账号登录后，进入腾讯问卷工作台，您可单击新建 +，选择新建问卷，即可进入“创建问卷”页面。
+选择相应账号登录后，进入腾讯问卷工作台，您可单击**新建 +**，选择**新建问卷**，即可进入“创建问卷”页面。
 <img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/1251c3b8455ad4d892236de76fe77a1d.png" />
 - 移动端：
  - 微信公众号登录
