--- a/product/数据库/云存储Redis/操作指南/诊断优化/实时会话.md
+++ b/product/数据库/云存储Redis/操作指南/诊断优化/实时会话.md
@@ -16,7 +16,7 @@
 5. 查看当前 Proxy 节点的连接数及其 CPU 使用率的变化趋势。
 ![](https://qcloudimg.tencent-cloud.cn/raw/a2c69a8d811846caabb8d51ea84bb9e3.png)
 
-## 会话统计
+**会话统计**
 
 在**实时会话**页签的**会话统计**区域，可查看数据库当前访问来源、总连接数、活跃连接数的统计信息。
 ![](https://qcloudimg.tencent-cloud.cn/raw/d54679bd8e9aae43c9b16706cb5e76c6.png)
