--- a/product/数据库/云存储Redis/操作指南/诊断优化/命令字分析.md
+++ b/product/数据库/云存储Redis/操作指南/诊断优化/命令字分析.md
@@ -14,7 +14,7 @@
 ![img](https://main.qcloudimg.com/raw/cf49546fe35e61bf095277b3d03dbd76.png)
 6. 分析命令字的变化趋势数据。
    - **实时统计**
-     默认实时统计数据，包括：命令请求数、P99执行时延、平均执行时延、最大执行时延指标的变化趋势。
+     默认实时统计数据，包括：命令请求数、P99执行时延、平均执行时延、最大执行时延指标的变化趋势。指标详情可参见 [性能趋势](https://cloud.tencent.com/document/product/239/73517) 的性能指标。
      ![img](https://main.qcloudimg.com/raw/0bd192f7954df57acd8874a692e66e5c.png)
    - **历史数据**
      单击**历史**，可直接查看近30分钟、近6小时、近24小时的统计数据。在时间选择框，单击<img src="https://qcloudimg.tencent-cloud.cn/raw/a1438740099d1baedaf57020fb2e397b.png" style="zoom: 50%;" />，也可查看近2天的统计数据。
