--- a/product/数据库/云存储Redis/操作指南/诊断优化/异常诊断.md
+++ b/product/数据库/云存储Redis/操作指南/诊断优化/异常诊断.md
@@ -26,7 +26,7 @@
 - **诊断详情**：每隔10分钟统计的数据库风险等级详情。 将鼠标放在任意一条异常告警，可查看、忽略和取消忽略同类的告警。
 <table>
 <thead>
-<tr><th>参数</th><th></th></tr></thead>
+<tr><th>参数</th><th>说明</th></tr></thead>
 <tbody><tr>
 <td>等级</td>
 <td>诊断的分险等级，由重至轻，包括： 致命、 严重、 告警 、 提示、健康。</td></tr>
