--- a/product/数据库/云存储Redis/操作指南/诊断优化/慢日志分析.md
+++ b/product/数据库/云存储Redis/操作指南/诊断优化/慢日志分析.md
@@ -35,13 +35,11 @@
     - 单击某条命令模板行，可在右侧弹出的面板上查看命令模板的具体分析优化建议和统计数据。
       - 在**分析**页签，展示命令模板、命令样例、优化建议和说明。
       - 在**统计**页签，展示该类型的命令（聚合后汇总的）运行的时间分布区间。来源 IP 的访问分布及占比（proxy 有，Redis 没有）。
-      ![img](https://main.qcloudimg.com/raw/c144821910a149ee51b807cc1f861627.png)
- 
-**图表联动**
+      ![img](https://main.qcloudimg.com/raw/c144821910a149ee51b807cc1f861627.png) 
+ - **图表联动**
 在慢日志统计模块，单击您要定位的时间点，会同步定位当前时间产生的慢日志信息，以及具体耗时情况。
 ![img](https://main.qcloudimg.com/raw/8d0596fc23190dffd3371d15a4c3374b.png)
-
-**监控详情**
+ - **监控详情**
 在慢日志分析页，单击右上角的**监控详情**，可以添加多个时间段，多个监控指标进行对比。
 ![img](https://main.qcloudimg.com/raw/2c8b8f1be41ed82699aa8f1ef31f3124.png)
 
