--- a/product/移动与通信/云开发低代码平台/最佳实践/从0到1搭建理发预约小程序/步骤3：组件数据绑定与页面逻辑设计.md
+++ b/product/移动与通信/云开发低代码平台/最佳实践/从0到1搭建理发预约小程序/步骤3：组件数据绑定与页面逻辑设计.md
@@ -15,22 +15,24 @@
 ### 步骤2：获取用户 openid
 1. 在编辑器中，创建全局变量，选择变量类型为**普通变量**，数据类型选择**字符串**。
    ![](https://qcloudimg.tencent-cloud.cn/raw/f537df564f4d82f452538618ee8d423d.png)
-
 2. 单击左上角**菜单按钮**进入**低代码编辑器**，创建方法名称为 **getopenid**。
    ![](https://qcloudimg.tencent-cloud.cn/raw/fa442694712d6f7aeb92b67ff5522961.png)
-
 3. 编写代码调用获取openid的api方法，方法使用说明可参考[获取小程序openid](https://cloud.tencent.com/document/product/1301/73438)。
    ![](https://qcloudimg.tencent-cloud.cn/raw/688055b6a33ef2ce6bc5a615bf28aae1.png)
    代码如下：
-   
-   `export default async function({event, data}) {`
+<dx-codeblock>
+:::  js
+   export default async function({event, data}) {
 
-   `var a=await app.utils.getWXContext();`
+   var a=await app.utils.getWXContext();
 
-   `app.dataset.state.openid = a.OPENID;`
+   app.dataset.state.openid = a.OPENID;
 
-   `}`
-   </dx-codeblock>
+   }
+:::
+</dx-codeblock>
+
+	 
 ### 步骤3：获取用户信息
 1. 参照上文方法创建两个全局变量，分别用来存储用户的头像以及微信名称。
 ![](https://qcloudimg.tencent-cloud.cn/raw/aa74513d306ffee4e45c3263dd4c8b44.jpg)
