--- a/product/视频服务/美视优享/Web美颜特效/SDK接入/接入指南.md
+++ b/product/视频服务/美视优享/Web美颜特效/SDK接入/接入指南.md
@@ -98,7 +98,13 @@ type AuthConfig = {
 <td>input</td>
 <td>输入源</td>
 <td>MediaStream|HTMLImageElement|String</td>
-<td>否</td></tr><tr>
+<td>否</td></tr>
+<tr>
+<td>fps</td>
+<td>渲染帧率</td>
+<td>number</td>
+<td>否</td></tr>
+<tr>
 <td>camera</td>
 <td>内置摄像头</td>
 <td><pre style="color:white">
