--- a/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
+++ b/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
@@ -30,10 +30,11 @@
   - MX 验证
   主机记录中填入：`@`
   记录类型选择：MX
-  记录值中填入：`mxbiz1.qq.com`
-![](https://qcloudimg.tencent-cloud.cn/raw/250a72988dfdcfb70f590161a767d10f.png)
+  记录值中填入：`mxbiz1.qq.com.`
+![](https://qcloudimg.tencent-cloud.cn/raw/44b8f49b6b58363bb7e66778ee7ea770.png)
 <dx-alert infotype="explain" title="">
-如果发信域名非主域名，例如：abc.sampledomain.com，主机记录中填入：abc。
+- 如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：abc
+- 请确保该记录值末尾需包含“.”，部分域名服务商会在MX的记录值末尾自动添加。
 </dx-alert>
   - SPF 验证：
   主机记录中填入：`@`
