--- a/product/计算与网络/容器服务/动态与公告/产品动态/弹性容器服务产品动态.md
+++ b/product/计算与网络/容器服务/动态与公告/产品动态/弹性容器服务产品动态.md
@@ -11,7 +11,7 @@
   </tr>
   <tr>
     <td>EKS 上线根据磁盘阈值自动重启 Pod 能力</td>
-    <td>此特性上线时间在 2022-04-27，故在此时间前创建的 pod，需要重建 pod 来开启特性。</td>
+    <td>此特性上线时间在2022年4月27日，故在此时间前创建的 pod，需要重建 pod 来开启特性。</td>
     <td>2022-04-27</td>
     <td><a href="https://cloud.tencent.com/document/product/457/54980" target="_blank" rel="noopener noreferrer">弹性集群相关</a></td>
   </tr>
@@ -23,7 +23,7 @@
   </tr>
     <tr>
     <td>虚拟节点支持限制 GPU 可调度 Pod 数</td>
-    <td>，虚拟节点支持限制 GPU 可调度 Pod 数，可 <a href="https://cloud.tencent.com/online-service?from=doc_457">在线咨询</a> 申请使用。</td>
+    <td> 虚拟节点支持限制 GPU 可调度 Pod 数，可 <a href="https://cloud.tencent.com/online-service?from=doc_457">在线咨询</a> 申请使用。</td>
     <td>2022-04-11</td>
     <td><a href="https://cloud.tencent.com/document/product/457/53030" target="_blank" rel="noopener noreferrer">调度至虚拟节点的 Pod 说明</a></td>
   </tr>
