--- a/product/视频服务/美视优享/Web美颜特效/SDK接入/接入指南.md
+++ b/product/视频服务/美视优享/Web美颜特效/SDK接入/接入指南.md
@@ -494,18 +494,8 @@ sdk.on('error', (error) => {
 
 
 ### SDK 提供方法
-<table class="prestyle">
-<style>
-.prestyle>tbody>tr>td>li>pre,.prestyle>tbody>tr>td>pre {
-    background-color: #50556B;
-    padding: 5px 5px;
-		margin-bottom: 5px;
-		word-break : break-all;
-		width:210px;
-		overflow: auto;
-}
-</style>
-<thead><tr><th>接口</th><th width=200px>参数</th><th width=200px>返回</th><th >说明</th></tr></thead>
+<table>
+<thead><tr><th>接口</th><th width=200px>参数</th><th>返回</th><th >说明</th></tr></thead>
 <tbody><tr>
 <td>async getOutput()</td>
 <td>-</td>
