--- a/product/计算与网络/云原生分布式云中心/产品动态/云原生分布式云中心产品动态.md
+++ b/product/计算与网络/云原生分布式云中心/产品动态/云原生分布式云中心产品动态.md
@@ -11,25 +11,25 @@
 <th style="width:15%">发布时间</th>	<th style="width:15%">相关文档</th> </tr>
  <tr>
     <td>注册集群审计日志接入腾讯云日志服务 CLS</td>
-    <td>为用户提供了开箱即用的审计仪表盘，方便用户观测和检索各类集群操作，以便于及时发现和定位问题</td>
+    <td>为用户提供了开箱即用的审计仪表盘，方便用户观测和检索各类集群操作，以便于及时发现和定位问题。</td>
     <td>2022-04-28 </td>
     <td><a href="https://cloud.tencent.com/document/product/457/72149" target="_blank" rel="noopener noreferrer">集群审计</a></td>
   </tr>
   <tr>
     <td>注册集群事件信息接入腾讯云日志服务 CLS</td>
-    <td>为用户提供开箱即用的事件仪表盘，实现在TDCC控制台全面观测、查找、分析、定位问题的能力</td>
+    <td>为用户提供开箱即用的事件仪表盘，实现在TDCC控制台全面观测、查找、分析、定位问题的能力。</td>
     <td>2022-04-28 </td>
     <td><a href="https://cloud.tencent.com/document/product/457/72150" target="_blank" rel="noopener noreferrer">事件存储</a></td>
   </tr>  
   <tr>
     <td>注册集群日志接入腾讯云日志服务 CLS</td>
-    <td>实现多集群日志的统一查询、分析和告警能力</td>
+    <td>实现多集群日志的统一查询、分析和告警能力。</td>
     <td>2022-04-25 </td>
     <td><a href="https://cloud.tencent.com/document/product/457/72148" target="_blank" rel="noopener noreferrer">日志采集</a></td>
   </tr>
   <tr>
     <td>注册集群接入腾讯云 Prometheus 监控服务</td>
-    <td>实现多集群监控的统一管理</td>
+    <td>实现多集群监控的统一管理。</td>
     <td>2022-04-01 </td>
     <td><a href="https://cloud.tencent.com/document/product/457/71896" target="_blank" rel="noopener noreferrer">Prometheus 监控概述</a></td>
   </tr>
