--- a/product/数据库/云存储Redis/操作指南/诊断优化/慢日志分析.md
+++ b/product/数据库/云存储Redis/操作指南/诊断优化/慢日志分析.md
@@ -37,9 +37,9 @@
       - 在**统计**页签，展示该类型的命令（聚合后汇总的）运行的时间分布区间。来源 IP 的访问分布及占比（proxy 有，Redis 没有）。
       ![img](https://main.qcloudimg.com/raw/c144821910a149ee51b807cc1f861627.png) 
  - **图表联动**
-在慢日志统计模块，单击您要定位的时间点，会同步定位当前时间产生的慢日志信息，以及具体耗时情况。
+在**慢日志统计**的监控视图上，单击您要定位的时间点，可同时查看该时间产生的慢日志分段耗时的占比数据，以及具体耗时情况。 
 ![img](https://main.qcloudimg.com/raw/8d0596fc23190dffd3371d15a4c3374b.png)
  - **监控详情**
-在慢日志分析页，单击右上角的**监控详情**，可以添加多个时间段，多个监控指标进行对比。
+在**慢日志统计**页面，单击右上角的**监控详情**，在弹出的对话框的下拉列表中，选择相关联的监控指标，并设置查看时间段，可比较该时段多个指标的最大值与平均值的统计数据。单击**添加时间对比**，也可对比两个时间段的统计数据。
 ![img](https://main.qcloudimg.com/raw/2c8b8f1be41ed82699aa8f1ef31f3124.png)
 
