--- a/product/计算与网络/容器服务/动态与公告/产品动态/容器服务产品动态.md
+++ b/product/计算与网络/容器服务/动态与公告/产品动态/容器服务产品动态.md
@@ -12,7 +12,7 @@
   </tr>
   <tr>
     <td>伸缩组功能下线</td>
-    <td>伸缩组服务将于2022年6月6日正式关闭控制台和 API 创建入口，并于6月13日正式下线（25日后存量伸缩组会默认转换为节点池）。</td>
+    <td>伸缩组服务将于2022年6月6日正式关闭控制台和 API 创建入口，并于6月13日正式下线（6月13日后存量伸缩组会默认转换为节点池）。</td>
     <td>2022-04-26</td>
     <td><a href="https://cloud.tencent.com/document/product/457/73079" target="_blank" rel="noopener noreferrer">伸缩组功能下线公告</a></td>
   </tr>
