--- a/product/大数据与AI/弹性MapReduce/操作指南/管理集群/自定义服务角色.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/管理集群/自定义服务角色.md
@@ -13,7 +13,7 @@
 			{
 					"action": "cos:*",
 					"effect": "allow",
-					"resource": "qcs::cos::uid/appId:$bucketName/*"
+					"resource": "qcs::cos::uid/appId:bucketName/*"
 			}
 		]
 }
